# mc_server_manager

./: Cargo.toml  LICENSE  README.md  build.rs  config.ini
src/: backup.rs  c_processes.c  c_processes.h  config.rs  error.rs  io.rs  jobs.rs  lib.rs  processes.rs  server_handler.rs  telegram.rs
